changed a7, switched POST and PUT methods

--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -93,113 +93,15 @@ By the end of the seventh iteration, it will be already established:
 ### 3.1 Authentication and register
 
 ##### Endpoints of Module: Authentication and register
-* R101: Login Form [/login]
-* R102: Register Form [/register]
-* R103: Admin Login Form [/admin/login or /admin/]
-* R104: Login Action [/login]
-* R105: Register Action [/register]
+* R101: Login Action [/login]
+* R102: Register Action [/register]
+* R103: Login with Google Action [/login]
+* R104: Register with Google Action [/register]
+* R105: Admin Login Form [/admin/login or /admin/]
 * R106: Admin Login Action [/admin/login]
-* R107: Login with Google Action [/login]
-* R108: Register with Google Action [/register]
  
-#### R101: Login Form
+#### R101: Login Action
 <table id="r101">
-    <tr>
-        <td colspan="2">URL</td>
-        <td colspan="4">/login </td>
-    </tr>
-    <tr>
-        <td colspan="2">Description</td>
-        <td colspan="4">View with the login form</td>
-    </tr>
-    <tr>
-        <td colspan="2">Method</td>
-        <td colspan="4">GET</td>
-    </tr>
-    <tr>
-        <td colspan="2">UI</td>
-        <td colspan="4"><a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/homepage.php">UI01 (Sign in/up)</a></td>
-    </tr>
-    <tr>
-        <td colspan="2">AJAX calls </td>
-        <td colspan="4"><a href="#r104">R104</a></td>
-    </tr>
-    <tr>
-        <td colspan="2">Permissions</td>
-        <td colspan="2">PUB</td>
-    </tr>
-</table>
-
-###### Table 3: Login Form
-
----
-
-#### R102: Register Form
-<table id="r102">
-    <tr>
-        <td colspan="2">URL</td>
-        <td colspan="4">/register </td>
-    </tr>
-    <tr>
-        <td colspan="2">Description</td>
-        <td colspan="4">View with the register form</td>
-    </tr>
-    <tr>
-        <td colspan="2">Method</td>
-        <td colspan="4">GET</td>
-    </tr>
-    <tr>
-        <td colspan="2">UI</td>
-        <td colspan="4"><a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/homepage.php">UI01 (Sign in/up)</a></td>
-    </tr>
-    <tr>
-        <td colspan="2">AJAX calls</td>
-        <td colspan="4"><a href="#r105">R105</a></td>
-    </tr>
-    <tr>
-        <td colspan="2">Permissions</td>
-        <td colspan="2">PUB</td>
-    </tr>
-</table>
-
-###### Table 4: Register Form
-
----
- 
-#### R103: Admin Login Form
-<table id="r103">
-    <tr>
-        <td colspan="2">URL</td>
-        <td colspan="4">/admin/login or /admin/ </td>
-    </tr>
-    <tr>
-        <td colspan="2">Description</td>
-        <td colspan="4">View with the admin login form</td>
-    </tr>
-    <tr>
-        <td colspan="2">Method</td>
-        <td colspan="4">GET</td>
-    </tr>
-    <tr>
-        <td colspan="2">UI</td>
-        <td colspan="4"><a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_login.php">UI19 (Admin Page - Login)</a></td>
-    </tr>
-    <tr>
-        <td colspan="2">Submit</td>
-        <td colspan="4"><a href="#r106">R106</a></td>
-    </tr>
-    <tr>
-        <td colspan="2">Permissions</td>
-        <td colspan="2">ADM</td>
-    </tr>
-</table>
-
-###### Table 5: Admin Login Form
-
----
-
-#### R104: Login Action
-<table id="r104">
   <tr>
     <td colspan="2">URL</td>
     <td colspan="4">/login</td>
@@ -240,12 +142,12 @@ By the end of the seventh iteration, it will be already established:
   </tr>
 </table>
 
-###### Table 6: Login Action
+###### Table 3: Login Action
 
 ---
 
-#### R105: Register Action
-<table id="r105">
+#### R102: Register Action
+<table id="r102">
   <tr>
     <td colspan="2">URL</td>
     <td colspan="4">/register</td>
@@ -256,7 +158,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="2">Request Body</td>
@@ -282,8 +184,129 @@ By the end of the seventh iteration, it will be already established:
   </tr>
 </table>
 
-###### Table 7: Register Action
+###### Table 4: Register Action
+
 ----
+
+#### R103: Google Login Action
+<table id="r103">
+  <tr>
+    <td colspan="2">URL</td>
+    <td colspan="4">/login</td>
+  </tr>
+  <tr>
+    <td colspan="2">Description</td>
+    <td colspan="4">Action to submit the login request.</td>
+  </tr>
+  <tr>
+      <td colspan="2">Method</td>
+      <td colspan="4">POST</td>
+  </tr>
+  <tr>
+      <td colspan="2" rowspan="2">Request Body</td>
+      <td colspan="2">+userName: string</td>
+      <td colspan="2">Username to check login</td>
+  </tr>
+  <tr>
+      <td colspan="2">+password: string</td>
+      <td colspan="2">Password to check login</td>
+  </tr>
+  <tr>
+      <td colspan="2" rowspan="3">Returns</td>
+      <td colspan="2">200 OK</td>
+      <td colspan="2">The login is successful and the login modal is closed</td>
+  </tr>
+   <tr>
+      <td colspan="2">400 Bad Request</td>
+      <td colspan="2">The form is malformed</td>
+  </tr>
+  <tr>
+      <td colspan="2">401 Unauthorized</td>
+      <td colspan="2">The login was wrong. A message broadcasting the error is displayed in the modal</td>
+  </tr>
+  <tr>
+      <td colspan="2">Permissions</td>
+      <td colspan="4">PUB</td>
+  </tr>
+</table>
+
+###### Table 5: Google Login Action
+
+---
+
+#### R104: Google Register Action
+<table id="r104">
+  <tr>
+    <td colspan="2">URL</td>
+    <td colspan="4">/register</td>
+  </tr>
+  <tr>
+    <td colspan="2">Description</td>
+    <td colspan="4">Action to submit the register request.</td>
+  </tr>
+  <tr>
+      <td colspan="2">Method</td>
+      <td colspan="4">PUT</td>
+  </tr>
+  <tr>
+      <td colspan="2" rowspan="2">Request Body</td>
+      <td colspan="2">+userName: string</td>
+      <td colspan="2">Username to save it into the database</td>
+  </tr>
+  <tr>
+      <td colspan="2">+password: string</td>
+      <td colspan="2">Password to save it into the database</td>
+  </tr>
+  <tr>
+      <td colspan="2" rowspan="2">Returns</td>
+      <td colspan="2">200 OK</td>
+      <td colspan="2">Success</td>
+  </tr>
+  <tr>
+      <td colspan="2">400 Bad Request</td>
+      <td colspan="2">The form is malformed</td>
+  </tr>
+  <tr>
+      <td colspan="2">Permissions</td>
+      <td colspan="4">PUB</td>
+  </tr>
+</table>
+
+###### Table 6: Register Action
+
+----
+
+#### R105: Admin Login Form
+<table id="r105">
+    <tr>
+        <td colspan="2">URL</td>
+        <td colspan="4">/admin/login or /admin/ </td>
+    </tr>
+    <tr>
+        <td colspan="2">Description</td>
+        <td colspan="4">View with the admin login form</td>
+    </tr>
+    <tr>
+        <td colspan="2">Method</td>
+        <td colspan="4">GET</td>
+    </tr>
+    <tr>
+        <td colspan="2">UI</td>
+        <td colspan="4"><a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_login.php">UI19 (Admin Page - Login)</a></td>
+    </tr>
+    <tr>
+        <td colspan="2">Submit</td>
+        <td colspan="4"><a href="#r106">R106</a></td>
+    </tr>
+    <tr>
+        <td colspan="2">Permissions</td>
+        <td colspan="2">ADM</td>
+    </tr>
+</table>
+
+###### Table 7: Admin Login Form
+
+---
 
 #### R106: Admin Login Action
 <table id="r106">
@@ -612,7 +635,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
         <td colspan="2">Parameters</td>
@@ -668,7 +691,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
         <td colspan="2">Parameters</td>
@@ -727,7 +750,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
         <td colspan="2">Parameters</td>
@@ -782,7 +805,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
         <td colspan="2">Parameters</td>
@@ -837,7 +860,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
         <td colspan="2">Parameters</td>
@@ -1098,7 +1121,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="6">Request Body</td>
@@ -1189,7 +1212,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="7">Request Body</td>
@@ -1336,7 +1359,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Response Body</td>
-      <td colspan="4"><a href="#j311">JSON311</td>
+      <td colspan="4"><a href="#j311">JSON311</a></td>
   </tr>
   <tr>
       <td colspan="2">Permissions</td>
@@ -1360,7 +1383,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2">Request Body</td>
@@ -1383,7 +1406,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Response Body</td>
-      <td colspan="4"><a href="#j300">JSON300</td>
+      <td colspan="4"><a href="#j300">JSON300</a></td>
   </tr>
   <tr>
       <td colspan="2">Permissions</td>
@@ -1454,7 +1477,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="2">Request Body</td>
@@ -1577,7 +1600,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2">Request Body</td>
@@ -1604,7 +1627,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Response Body</td>
-      <td colspan="4"><a href="#j300">JSON300</td>
+      <td colspan="4"><a href="#j300">JSON300</a></td>
   </tr>
   <tr>
       <td colspan="2">Permissions</td>
@@ -1675,7 +1698,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
       <td colspan="2">Request Body</td>
@@ -1799,7 +1822,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2">Request Body</td>
@@ -1822,7 +1845,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Response Body</td>
-      <td colspan="4"><a href="#j300">JSON300</td>
+      <td colspan="4"><a href="#j300">JSON300</a></td>
   </tr>
   <tr>
       <td colspan="2">Permissions</td>
@@ -1893,7 +1916,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
       <td colspan="2">Request Body</td>
@@ -2045,7 +2068,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
       <td colspan="2">Request Body</td>
@@ -2183,7 +2206,7 @@ By the end of the seventh iteration, it will be already established:
   <tr>
       <td colspan="2">Method</td>
       <td colspan="4">GET</td>
-  </tr
+  </tr>
   <tr>
       <td colspan="2">Parameters</td>
        <td colspan="2">+page: integer</td>
@@ -2216,7 +2239,7 @@ By the end of the seventh iteration, it will be already established:
   <tr>
       <td colspan="2">Method</td>
       <td colspan="4">GET</td>
-  </tr
+  </tr>
   <tr>
       <td colspan="2">Parameters</td>
        <td colspan="2">+page: integer</td>
@@ -2431,7 +2454,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="2">Request Body</td>
@@ -2458,7 +2481,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Response Body</td>
-      <td colspan="4"><a href="#j300">JSON300</td>
+      <td colspan="4"><a href="#j300">JSON300</a></td>
   </tr>
   <tr>
       <td colspan="2">Permissions</td>
@@ -2482,7 +2505,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="2">Request Body</td>
@@ -2835,7 +2858,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="2">Request Body</td>
@@ -3122,7 +3145,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
         <td colspan="2" rowspan="">Parameters</td>
@@ -3193,7 +3216,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">PUT</td>
+      <td colspan="4">POST</td>
   </tr>
   <tr>
         <td colspan="2" rowspan="2">Parameters</td>
@@ -3312,8 +3335,9 @@ By the end of the seventh iteration, it will be already established:
 * R705: Feedback Add [/feedback]
 * R706: Admin Report View[/admin/report/{id}]
 * R707: Admin Report Message Add[/admin/report/{id}/message]
-#### R701: Feedback View
 
+
+#### R701: Feedback View
 <table id="r701">
     <tr>
         <td colspan="2">URL</td>
@@ -3438,7 +3462,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="3">Request Body</td>
@@ -3489,7 +3513,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="4">Request Body</td>
@@ -3544,7 +3568,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   
   <tr>
@@ -3585,6 +3609,7 @@ By the end of the seventh iteration, it will be already established:
 </table>
 
 ###### Table 78: Feedback Add
+
 ---
 
 #### R706: Admin Report View
@@ -3621,6 +3646,7 @@ By the end of the seventh iteration, it will be already established:
 </table>
 
 ###### Table 78: Admin Report View
+
 ---
 
 #### R707: Report Message Add
@@ -3635,7 +3661,7 @@ By the end of the seventh iteration, it will be already established:
   </tr>
   <tr>
       <td colspan="2">Method</td>
-      <td colspan="4">POST</td>
+      <td colspan="4">PUT</td>
   </tr>
   <tr>
       <td colspan="2" rowspan="3">Request Body</td>
@@ -3671,7 +3697,9 @@ By the end of the seventh iteration, it will be already established:
 </table>
 
 ###### Table 79: Report Message Add
+
 ---
+
 ## 4. JSON/XML Types
 
 <span id = "j300"></span>
@@ -3733,11 +3761,11 @@ By the end of the seventh iteration, it will be already established:
   "categories": [
     {
       "id": "1",
-      "name": "Game",
+      "name": "Game"
     },
     {
       "id": "2",
-      "name": "DLC",
+      "name": "DLC"
     }
   ]
 }
@@ -3749,11 +3777,11 @@ By the end of the seventh iteration, it will be already established:
   "genres": [
     {
       "id": "1",
-      "name": "Game",
+      "name": "Game"
     },
     {
       "id": "2",
-      "name": "DLC",
+      "name": "DLC"
     }
   ]
 }
@@ -3765,11 +3793,11 @@ By the end of the seventh iteration, it will be already established:
   "platforms": [
     {
       "id": "1",
-      "name": "Game",
+      "name": "Game"
     },
     {
       "id": "2",
-      "name": "DLC",
+      "name": "DLC"
     }
   ]
 }
@@ -3783,13 +3811,13 @@ By the end of the seventh iteration, it will be already established:
     {
       "id": "1",
       "userName": "lockdownPT",
-       "image": "O8GHTDJN12UMHN4B9813128B1231",
+       "image": "O8GHTDJN12UMHN4B9813128B1231"
     },
     {
       "id": "2",
       "userName": "Motapinto",
-       "image": "O8GHTDJN12UMHN4B9813128B1231",
-    },
+       "image": "O8GHTDJN12UMHN4B9813128B1231"
+    }
   ]
 }
 ```
@@ -3801,13 +3829,13 @@ By the end of the seventh iteration, it will be already established:
     {
       "id": "1",
       "userName": "lockdownPT",
-       "image": "O8GHTDJN12UMHN4B9813128B1231",
+       "image": "O8GHTDJN12UMHN4B9813128B1231"
     },
     {
       "id": "2",
       "userName": "Motapinto",
-       "image": "O8GHTDJN12UMHN4B9813128B1231",
-    },
+       "image": "O8GHTDJN12UMHN4B9813128B1231"
+    }
   ]
 }
 ```
@@ -3827,7 +3855,7 @@ By the end of the seventh iteration, it will be already established:
       "reporter": "Motapinto",
        "report": "He is Fake",
        "status":"Open"
-    },
+    }
   ]
 }
 ```
@@ -3848,7 +3876,7 @@ By the end of the seventh iteration, it will be already established:
       "seller": "Motapinto",
        "buyer": "LockdownPT",
        "totalPrice":"50"
-    },
+    }
   ]
 }
 ```
@@ -3869,7 +3897,7 @@ By the end of the seventh iteration, it will be already established:
       "seller": "Motapinto",
        "buyer": "LockdownPT",
        "totalPrice":"50"
-    },
+    }
   ]
 }
 ```
@@ -3889,7 +3917,7 @@ By the end of the seventh iteration, it will be already established:
       "date": "2019/05/04",
       "author": "Ruben Almeida",
       "target":"LockdownPT"
-    },
+    }
   ]
 }
 ```
@@ -3909,7 +3937,7 @@ By the end of the seventh iteration, it will be already established:
       "date": "2019/05/04",
       "author": "Ruben Almeida",
       "target":"LockdownPT"
-    },
+    }
   ]
 }
 ```
