changed a7, switched POST and PUT methods

--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -4035,11 +4035,14 @@ By the end of the seventh iteration, it will be already established:
 
 ## Revision history
 
-Changes made to the first submission:
+First submission: 16/04/2020
+
+Changes done to first submission: 17/04/2020
+* Changed all POST methods to PUT and all PUT methods to POST.
 
 
 ***
-GROUP2043, 16/04/2020
+GROUP2043, 17/04/2020
 
 * Luís Ramos, up201706253@fe.up.pt (Editor)
 * José Guerra, up201706421@fe.up.pt
