added user routes

--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -643,7 +643,7 @@ By the end of the seventh iteration, it will be already established:
         <td colspan="2">user primary key</td>
     </tr>
   <tr>
-      <td colspan="2" rowspan="3">Request Body</td>
+      <td colspan="2" rowspan="2">Request Body</td>
       <td colspan="2">+userId: integer</td>
       <td colspan="2">User id to check the account</td>
   </tr>
@@ -4039,7 +4039,7 @@ First submission: 16/04/2020
 
 Changes done to first submission: 17/04/2020
 * Changed all POST methods to PUT and all PUT methods to POST.
-
+* Fixed table 207 layout
 
 ***
 GROUP2043, 17/04/2020
