N sei bem o que ando a dar commit do relatorio , mas deve ser algo inacabado

--- a/previous_iterations/doc/artifacts/A7.md
+++ b/previous_iterations/doc/artifacts/A7.md
@@ -105,6 +105,8 @@ By the end of the seventh iteration, it will be already established:
 * R106: Register with Google Action [/register]
 * R107: Admin Login Form [/admin/login]
 * R108: Admin Login Action [/admin/login]
+* R109: Logout User[/logout]
+* R110: Logout Admin[/admin/logout]
  
 #### R101-Login Form
 
@@ -404,13 +406,14 @@ By the end of the seventh iteration, it will be already established:
       <td colspan="2">Password to check login</td>
   </tr>
   <tr>
-      <td colspan="2" rowspan="2">Returns</td>
-      <td colspan="2">200 OK</td>
+      <td colspan="2">Redirects</td>
+      <td colspan="2">R301</td>
       <td colspan="2">Success</td>
   </tr>
-  <tr>
-      <td colspan="2">400 Bad Request</td>
-      <td colspan="2">The form is malformed</td>
+   <tr>
+      <td colspan="2"></td>
+      <td colspan="2">R107</td>
+      <td colspan="2">Error</td>
   </tr>
   <tr>
       <td colspan="2">Permissions</td>
@@ -419,6 +422,66 @@ By the end of the seventh iteration, it will be already established:
 </table>
 
 ###### Table 8: Admin Login Action
+
+---
+
+#### R109: Logout User
+
+<table id="r109">
+  <tr>
+    <td colspan="2">URL</td>
+    <td colspan="4">/logout</td>
+  </tr>
+  <tr>
+    <td colspan="2">Description</td>
+    <td colspan="4">Action to submit the logout request.</td>
+  </tr>
+  <tr>
+      <td colspan="2">Method</td>
+      <td colspan="4">POST</td>
+  </tr>
+  <tr>
+      <td colspan="2">Redirects</td>
+      <td colspan="2">R401</td>
+      <td colspan="2">Success</td>
+  </tr>
+  <tr>
+      <td colspan="2">Permissions</td>
+      <td colspan="4">AUTHUSER</td>
+  </tr>
+</table>
+
+###### Table : Logout User
+
+---
+
+#### R110: Logout Admin
+
+<table id="r110">
+  <tr>
+    <td colspan="2">URL</td>
+    <td colspan="4">/admin/logout</td>
+  </tr>
+  <tr>
+    <td colspan="2">Description</td>
+    <td colspan="4">Action to submit the logout request for an admin account.</td>
+  </tr>
+  <tr>
+      <td colspan="2">Method</td>
+      <td colspan="4">POST</td>
+  </tr>
+  <tr>
+      <td colspan="2">Redirects</td>
+      <td colspan="2">R107</td>
+      <td colspan="2">Success</td>
+  </tr>
+  <tr>
+      <td colspan="2">Permissions</td>
+      <td colspan="4">ADM</td>
+  </tr>
+</table>
+
+###### Table : Admin Logout
 
 ---
 
@@ -3832,6 +3895,10 @@ First submission: 16/04/2020
 Changes done to first submission: 17/04/2020
 * Changed all POST methods to PUT and all PUT methods to POST.
 * Fixed table 207 layout
+* Inserted logout's resources
+* Change search to be indexable
+* Removed the user id from the cart module URLs
+* Login and register are no longer AJAX Calls
 
 ***
 GROUP2043, 17/04/2020
