Edit email not done

--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -783,11 +783,11 @@ By the end of the seventh iteration, it will be already established:
       <td colspan="2">New profile photo</td>
   </tr>
   <tr>
-      <td colspan="2">+newEmail: string</td>
+      <td colspan="2">?newEmail: string</td>
       <td colspan="2">New email address</td>
   </tr>
    <tr>
-      <td colspan="2">+newPaypalAddress: string</td>
+      <td colspan="2">?newPaypalAddress: string</td>
       <td colspan="2">New paypalAddress address</td>
   </tr>
   <tr>
