added all routes from a7 and created controllers

--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -414,15 +414,15 @@ By the end of the seventh iteration, it will be already established:
 * R322: Platforms Remove Action [/admin/platform/{id}]
 * R323: Platforms Update Action [/admin/platform/{id}]
 * R324: Users Listing View [/admin/user]
-* R325: Users Listing Action [/api/admin/user/list]
+* R325: Users Listing Action [/api/admin/user]
 * R326: Users Update Action [/admin/user/{id}]
 * R327: Reports Listing View [/admin/report]
 * R328: Reports Listing Action [/api/admin/report]
 * R329: Transactions Listing View [/admin/transaction]
 * R330: Transactions Listing Action [/api/admin/transaction]
-* R331: Reviews Listing View [/admin/review]
-* R332: Reviews Listing Action [/api/admin/review]
-* R333: Reviews Remove Action [/admin/review/{id}]
+* R331: Feedback Listing View [/admin/feedback]
+* R332: Feedback Listing Action [/api/admin/feedback]
+* R333: Feedback Remove Action [/admin/feedback/{id}]
 * R334: FAQ Listing View [/admin/faq]
 * R335: FAQ Listing Action [/api/admin/faq]
 * R336: FAQ Add Action [/admin/faq]
@@ -903,49 +903,49 @@ By the end of the seventh iteration, it will be already established:
 
 ---
 
-#### R331: Review Listing View
+#### R331: Feedback Listing View
 | | | |
 |---|---|---|
-| URL  | /admin/review |
-| Description | View with the list of the reviews in the system. |
+| URL  | /admin/feedback |
+| Description | View with the list of the feedback in the system. |
 | Method | GET |
-| AJAX Calls | [R332](#r332-review-listing-action) | Called in the rendering of the page and when searching for reviews. |
-| | [R333](#r333-review-remove-action) | Called when deleting a review. |
+| AJAX Calls | [R332](#r332-review-listing-action) | Called in the rendering of the page and when searching for feedback. |
+| | [R333](#r333-review-remove-action) | Called when deleting a feedback. |
 | Permissions | ADM |
 
-###### Table 50: Review Listing View
+###### Table 50: Feedback Listing View
 
 ---
 
-#### R332: Review Listing Action
+#### R332: Feedback Listing Action
 | | | |
 |---|---|---|
-| URL  | /api/admin/review |
-| Description | Request to return the list of reviews. |
+| URL  | /api/admin/feedback |
+| Description | Request to return the list of feedback. |
 | Method | GET |
 | Parameters | ?page: integer | Results paging. |
 | | ?query: string | String to use as element of searching. |
 | Response Body | [JSON332](#json332-review-listing-action-reviews) |
 | Permissions | ADM |
 
-######  Table 51: Review Listing Action
+######  Table 51: Feedback Listing Action
 
 ---
 
-#### R333: Review Remove Action
+#### R333: Feedback Remove Action
 | | | |
 |---|---|---|
-| URL  | /admin/review/{id} |
-| Description | Action to remove review. |
+| URL  | /admin/feedback/{id} |
+| Description | Action to remove feedback. |
 | Method | DELETE |
-| Parameters | +id: integer | Id of the review to remove |
-| Returns | 200 OK | The review deletion was successful |
-| | 400 Bad Request | The review deletion had an error |
-| | 401 Unauthorized | The review of the category was refused |
-| | 404 Not Found | Review not found |
+| Parameters | +id: integer | Id of the feedback to remove |
+| Returns | 200 OK | The feedback deletion was successful |
+| | 400 Bad Request | The feedback deletion had an error |
+| | 401 Unauthorized | The feedback of the category was refused |
+| | 404 Not Found | Feedback not found |
 | Permissions | ADM |
 
-######  Table 52: Review Remove Action
+######  Table 52: Feedback Remove Action
 
 ---
 
@@ -1042,7 +1042,7 @@ By the end of the seventh iteration, it will be already established:
 * R401: Website Homepage[/ or /home]
 * R402: Products Listing [/search]
 * R403: Product Page [/product/{id}/{platform}]
-* R404: Listing Restriction [/search/filters]
+* R404: Listing Restriction [/api/product]
 * R405: Offers Ordering [/product/{id}/{platform}/offers]
 
 #### R401: Website Homepage
@@ -1130,8 +1130,8 @@ By the end of the seventh iteration, it will be already established:
 
 ### 3.5 Module Cart and Checkout
 
-* R501: Cart View [cart]
-* R502: Cart Add [cart]
+* R501: Cart View [/cart]
+* R502: Cart Add [/cart]
 * R503: Cart Remove [/cart/{id}]
 * R504: Checkout View [/cart/checkout]
 * R505: Checkout Action [/cart/checkout]
@@ -1468,7 +1468,7 @@ By the end of the seventh iteration, it will be already established:
 
 ##### Endpoints of module: Module Social Interaction:
 
-* R701: Feedback Listing Action [/user/{username}/feedback]
+* R701: Feedback Listing Action [/api/user/{username}/feedback]
 * R702: Report View [/report/{id}]
 * R703: Report Message Add Action [/report/{id}]
 * R704: Report Add Action [/key/{id}/report]
